# sdcp-printer-hacs

./: README.md  hacs.json  pyproject.toml
custom_components/sdcp_printer/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  icons.json  manifest.json  sensor.py
custom_components/sdcp_printer/translations/: en.json
