[project]
name = "sdcp_printer_hacs"
description = "A custom integration to communicate with 3D printers that communicate with the SDCP protocol."
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "asyncio-dgram",
    "sdcp-printer>=0.2.0",
    "websockets",
]
readme = "README.md"
authors = [
    { name = "Kevin Petersen", email = "kevinvkpetersen@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kevinvkpetersen/sdcp-printer-hacs"
Issues = "https://github.com/kevinvkpetersen/sdcp-printer-hacs/issues"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# arguments-differ - overloads with different arguments
# arguments-renamed - overloads with different arguments
# expression-not-assigned - null-guard falsely triggers this
# import-error - false positive on local imports
# import-self - api is named the same as this integration's domain
# logging-fstring-interpolation - better readability with fstrings
# no-name-in-module - false positive on local imports
# unexpected-keyword-arg - overloads with different arguments
# unused-argument - generic callbacks and setup methods create a lot of warnings
disable = """
    arguments-differ,
    arguments-renamed,
    expression-not-assigned,
    import-self,
    logging-fstring-interpolation,
    unexpected-keyword-arg,
    unused-argument,
"""
